@@ -1,6 +1,8 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - improved test coverage
+       - ngram returns string if shorter than width
 
 0.013  2014-08-20 20:02:45 CEST
        - remove n-gram padding, return the unchanged word if shorter
